# service_studio-backend

./: .gitignore  Dockerfile  LICENSE  Procfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  alembic.ini  firebase_utils.py  main.py  populate.py
app/crud/: __init__.py  base.py  crud_client.py  crud_owner_studio.py  crud_person.py  crud_provider.py  crud_sell.py  crud_studio.py  crud_studio_service_provider.py
app/db/: database.py
app/fake_data/: insert_values.txt
app/migrations/: env.py
app/models/: __init__.py  models.py
app/routers/: __init__.py  client_route.py  dependencies.py  person_route.py  sell_route.py  service_provider_route.py  studio_route.py  studio_service_provider.py
app/schemas/: __init__.py  owner_studio.py  person.py  sell.py  service_provider.py  studio.py  studio_service_provider.py
app/shared/: firebase-private-key.json
migrations/: env.py
migrations/versions/: 00a7eae9e234_first.py
sql_app/: __init__.py  alembic.ini  crud.py  custom_logger.py  database.py  dependencies.py  firebase_utils.py  firetest.py  main.py  models.py  populate.py  schemas.py  test_main.py
sql_app/crud/: __init__.py  base.py  crud_client.py  crud_provider.py  crud_sell.py  crud_studio.py
sql_app/db/: __init__.py  database.py
sql_app/fake_data/: csv_parse_values.py  insert_values.txt  opa.txt
sql_app/migrations/: env.py
sql_app/models/: __init__.py  models.py
sql_app/routers/: __init__.py  client_route.py  dependencies.py  sell_route.py  service_provider_route.py  studio_route.py
(+11 files in other folders)
