[tool.poetry]
name = "sql_app"
version = "0.1.0"
description = ""
authors = ["Dilermando Queiroz Neto <dilermando.queiroz@aluno.ufabc.edu.br>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.80.0"
uvicorn = "^0.18.2"
psycopg2 = "^2.9.3"
firebase-admin = "^5.2.0"
requests = "^2.28.1"
email-validator = "^1.2.1"
SQLAlchemy = "^1.4.40"
alembic = "^1.8.1"
python-dotenv = "^0.21.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
